ajout adversaire cote client
j'ai ajouter adversaire;
j'ai ajouter les enemier de l'adversaire

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <canvas id="myCanvas"></canvas>
-    <button id="restart">restart</button>
+    <button id="restart">start</button>
     <script src="bouton.js"></script>
 </body>
 
