--- a/www/index.html
+++ b/www/index.html
@@ -30,21 +30,20 @@
             <article>
               <h2>Lobby</h2>
               <p>Entrez votre pseudo pour rejoindre une partie :</p>
-              <select>
-                <option>
+              <select id="select">
+                <option value="solo">
                   solo
                 </option>
-                <option>
-                  multijoueur offline
+                <option value="offline">
+                    multijoueur offline
                 </option>
-                <option>
-                  multijoueur online
+                <option value="online">
+                    multijoueur online
                 </option>
               </select>
               <input type="text" id="pseudo" placeholder="Entrez votre pseudo">
-              <input type="text" id="pseudo1" placeholder="Entrez votre pseudo1">
-              <button onclick="joinGame()">Rejoindre</button>
-              <input id="restart" type="submit">
+              <input type="text" id="pseudo1" class="mask" placeholder="Entrez votre pseudo1">
+              <button id="start">start</button>
             </article>
             <article class="mask">
               <h2>Salle d'attente</h2>
@@ -58,7 +57,7 @@
           </section>
     </main>
     <script src="class/solo.js" type="module"></script>
-    <script src="bouton.js"></script>
+    <script src="bouton.js" type="module"></script>
 </body>
 
 </html>
