--- a/www/index.html
+++ b/www/index.html
@@ -2,62 +2,73 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-        var socket = io();
-    </script>
-    <script src="class/p5.min.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-    <style>
-    </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+  </script>
+  <script src="class/p5.min.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
+  <style>
+  </style>
 </head>
 
 <body>
-    <main>
-        <h1>
-            jeux de survie
-        </h1>
-        <section>
-            <article>
-              <h2>Jeu</h2>
-              <p>Vivez le plus longtemps possible sur la carte en évitant les ennemis.</p>
-              <p>Toutes les 2 secondes, un nouvel ennemi apparaît.</p>
-            </article>
-            <article>
-              <h2>Lobby</h2>
-              <p>Entrez votre pseudo pour rejoindre une partie :</p>
-              <select id="select">
-                <option value="solo">
-                  solo
-                </option>
-                <option value="offline">
-                    multijoueur offline
-                </option>
-                <option value="online">
-                    multijoueur online
-                </option>
-              </select>
-              <input type="text" id="pseudo" placeholder="Entrez votre pseudo">
-              <input type="text" id="pseudo1" class="mask" placeholder="Entrez votre pseudo1">
-              <button id="start">start</button>
-            </article>
-            <article class="mask">
-              <h2>Salle d'attente</h2>
-              <p>Attendez les joueurs (2 places).</p>
-              <p>Dès qu'il y a 2 joueurs, vous pouvez démarrer la partie en cliquant sur le bouton "Start".</p>
-              <p>Joueurs en attente :</p>
-              <ul id="players-list">
-              </ul>
-              <button>Start</button>
-            </article>
-          </section>
-    </main>
-    <script src="class/solo.js" type="module"></script>
-    <script src="bouton.js" type="module"></script>
+  <main>
+    <h1>
+      jeux de survie
+    </h1>
+    <section>
+      <article>
+        <h2>Jeu</h2>
+        <p>Vivez le plus longtemps possible sur la carte en évitant les ennemis.</p>
+        <p>Toutes les 2 secondes, un nouvel ennemi apparaît.</p>
+      </article>
+      <article>
+        <h2>
+          config des touche
+        </h2>
+        <table id="keyboard-table">
+          <tr>
+            <th>Touche</th>
+            <th>P1</th>
+            <th>P2</th>
+          </tr>
+        </table>
+      </article>
+      <article>
+        <h2>Lobby</h2>
+        <p>Entrez votre pseudo pour rejoindre une partie :</p>
+        <select id="select">
+          <option value="solo">
+            solo
+          </option>
+          <option value="offline">
+            multijoueur offline
+          </option>
+          <option value="online">
+            multijoueur online
+          </option>
+        </select>
+        <input type="text" id="pseudo" placeholder="Entrez votre pseudo">
+        <input type="text" id="pseudo1" class="mask" placeholder="Entrez votre pseudo1">
+        <button id="start">start</button>
+      </article>
+      <article class="mask">
+        <h2>Salle d'attente</h2>
+        <p>Attendez les joueurs (2 places).</p>
+        <p>Dès qu'il y a 2 joueurs, vous pouvez démarrer la partie en cliquant sur le bouton "Start".</p>
+        <p>Joueurs en attente :</p>
+        <ul id="players-list">
+        </ul>
+        <button>Start</button>
+      </article>
+    </section>
+  </main>
+  <script src="bouton.js" type="module"></script>
 </body>
 
 </html>
