--- a/www/index.html
+++ b/www/index.html
@@ -5,10 +5,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="/socket.io/socket.io.js"></script>
-  <script>
-    var socket = io();
-  </script>
   <script src="class/p5.min.js"></script>
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
@@ -68,7 +64,7 @@
       </article>
     </section>
   </main>
-  <script src="bouton.js" type="module"></script>
+  <script src="index.js" type="module"></script>
 </body>
 
 </html>
